Client Socket açıldı, Server'a bağlanıldı. Hi dediğinde Hello dönüyor, bye dediğinde Goodbye dönüyor.