@@ -3,14 +3,12 @@ plugins {
   id 'application'
   id 'org.javamodularity.moduleplugin' version '1.8.12'
   id 'org.openjfx.javafxplugin' version '0.0.13'
-  id 'org.beryx.jlink' version '2.25.0'
-  id 'com.github.johnrengelman.shadow' version '8.1.0' // Add this line
+  id 'org.beryx.jlink' version '3.0.1'
+  id 'com.github.johnrengelman.shadow' version '8.1.1'
 }
 
-group 'com.example'
-version '1.0-SNAPSHOT'
-
 repositories {
+  jcenter()
   mavenCentral()
 }
 
@@ -28,6 +26,7 @@ tasks.withType(JavaCompile) {
   options.encoding = 'UTF-8'
 }
 
+
 application {
   mainModule = 'com.example.internduru'
   mainClass = 'com.example.internduru.Launcher'
@@ -38,33 +37,15 @@ javafx {
   modules = ['javafx.controls', 'javafx.fxml']
 }
 
-
 dependencies {
   implementation 'org.openjfx:javafx-controls:21.0.2'
   implementation 'org.openjfx:javafx-fxml:21.0.2'
-
   implementation 'org.xerial:sqlite-jdbc:3.41.2.2'
   implementation 'org.json:json:20231013'
 
   testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
   testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
-}
 
-
-//"./gradlew shadowJar"
-shadowJar {
-  manifest {
-    attributes (
-            'Main-Class': 'com.example.internduru.Launcher'
-    )
-  }
-}
-
-run {
-  jvmArgs = [
-          '--module-path', 'com.example.internduru',
-          '--add-modules', 'javafx.controls: 21.0.2, javafx.fxml: 21.0.2'
-  ]
 }
 
 test {
@@ -72,18 +53,22 @@ test {
 }
 
 jlink {
-  imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
-  options = [
-          '--strip-debug',
-          '--compress', '2',
-          '--no-header-files',
-          '--no-man-pages',
-          '--add-modules', 'javafx.controls,javafx.fxml' // Ensure the correct modules are included
-  ]
+  options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+  jpackage {
+    skipInstaller = true
+  }
   launcher {
-    name = 'app'
+    name = 'Hugin2024'
   }
 }
+
+jar {
+  manifest {
+    attributes 'Main-Class': 'com.example.internduru.Launcher'
+  }
+}
+
+
 
 jlinkZip {
   group = 'distribution'
